--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,13 @@
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-          <attachClasses>true</attachClasses>
-          <webXml>target/web.xml</webXml>
-          <webResources>
-            <resource>
-                <directory>src/main/webapp</directory>
-                <filtering>true</filtering>
-            </resource>
-          </webResources>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
